--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,7 +19,7 @@
   }
   
   .navbar-logo {
-    color: #fff;
+    color:#e0d4d4;
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
@@ -64,7 +64,7 @@
   }
   
   .fa-bars {
-    color: #fff;
+    color:#794156;
   }
   
   .nav-links-mobile {
