--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    color: #fff;
+    color : rgb(199 210 196);
     font-size: 100px;
   }
   *{
@@ -98,11 +98,20 @@ body{
     color: rgb(70, 13, 13);
     font-size: 100px; */
     .gallery {
+      background-image: url("https://c4.wallpaperflare.com/wallpaper/947/575/815/abstract-ubuntu-gradient-wallpaper-preview.jpg");
       display: flex;
       width: 100%;
       padding: 4% 2%;
       box-sizing: border-box;
-      height: 100vh;
+      min-height: 100vh;
+      flex-wrap: wrap;
+      height: fit-content !important;
+      justify-content: center;
+      align-content: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+      
+      
     }
     
     .box {
@@ -112,6 +121,7 @@ body{
       margin: 0 2%;
       box-shadow: 0 20px 30px rgba(0,0,0,.1);
       line-height: normal;
+      min-width:200px;
     }
     
     .box > img {
@@ -134,6 +144,7 @@ body{
       width: 100%;
       height: 100%;
     }
+    
      
   
   
@@ -144,8 +155,11 @@ body{
 }
 
 body {
-  background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%);
-  font-size: 12px;
+  background-image: url('assests/images/ctpic.jpg');
+  /* background: linear-gradient(to right, #ea1d6f 0%, #eb466b 100%); */
+  font-size: 20px;
+  background-repeat:no-repeat;
+  background-size: cover;
 }
 
 body, button, input {
@@ -265,7 +279,7 @@ body, button, input {
 
 .app-contact {
   margin-top: auto;
-  font-size: 8px;
+  font-size: 13px;
   color: #888;
 }
 
